# nextcode_braccio

./: CMakeLists.txt  README.md  package.xml
arduino/BraccioRobotRos/: BraccioRobotRos.ino
launch/: braccio_driver_python.launch
src/: braccio_interface.py  detectnet-final.py  facenet-final.py
