<?xml version="1.0"?>
<package format="2">
  <name>nextcode_braccio</name>
  <version>0.0.0</version>
  <description>The nextcode_braccio package</description>

  <maintainer email="m.rizzini@csmt.it">Mattia Rizzini</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
